--- a/03-pipelines/Jenkinsfile
+++ b/03-pipelines/Jenkinsfile
@@ -5,8 +5,8 @@ pipeline {
             steps {
                 checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false,
                  extensions: [], submoduleCfg: [],
-                  userRemoteConfigs: [[credentialsId: '<credentials-id>', 
-                  url: 'https://github.com/<repo-owner>/<repo-name>.git']]])
+                  userRemoteConfigs: [[
+                  url: 'https://github.com/josekuma/bootcampDevOps']]])
             }
         }
         stage('Compile') {
