--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
                 checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false,
                  extensions: [], submoduleCfg: [],
                   userRemoteConfigs: [[
-                  url: 'https://github.com/josekuma/bootcampDevOps']]])
+                  url: 'https://github.com/josekuma/bootcampDevOps.git']]])
             }
         }
         stage('Compile') {
