--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
     stages {
         stage('Checkout') {
-            steps {
-                checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false,
-                 extensions: [], submoduleCfg: [],
-                  userRemoteConfigs: [[
-                  url: 'https://github.com/josekuma/bootcampDevOps.git']]])
-            }
+            
+            checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false,
+            extensions: [], submoduleCfg: [],
+            userRemoteConfigs: [[
+            url: 'https://github.com/josekuma/bootcampDevOps.git']]], customWorkspace: "${WORKSPACE}/03-pipelines/Ejercicio 1/jenkins-resources/")
+            
         }
         stage('Compile') {
             steps {
