--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,14 +3,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-            checkout([
-            $class: 'GitSCM', 
-            branches: [[name: '*/master']], 
-            doGenerateSubmoduleConfigurations: false, 
-            extensions: [], 
-            submoduleCfg: [], 
-            userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]],
-            customWorkspace: "${WORKSPACE}/03-pipelines/Ejercicio 1/jenkins-resources/")   
+checkout scmGit(branches: [[name: '*/master']], extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: '/03-pipelines/Ejercicio 1/jenkins-resources/']], userRemoteConfigs: [[url: '\'https://github.com/josekuma/bootcampDevOps.git\'']]) 
 
 
          
