--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-checkout scmGit(branches: [[name: '*/master']], extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: '/03-pipelines/Ejercicio 1/jenkins-resources/']], userRemoteConfigs: [[url: '\'https://github.com/josekuma/bootcampDevOps.git\'']]) 
+            checkout scmGit(branches: [[name: '*/master']], extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: '/03-pipelines/Ejercicio 1/jenkins-resources/']], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
 
 
          
