--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -12,12 +12,12 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                sh './gradlew compileJava'
+                sh 'gradlew compileJava'
             }
         }
         stage('Unit Tests') {
             steps {
-                sh './gradlew test'
+                sh 'gradlew test'
             }
         }
     }
