--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Compile') {
             steps {
                 
-                    sh './gradlew compileJava'
+                    sh 'gradlew compileJava'
 
             
             }
