--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,8 +3,8 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-            checkout scmGit(branches: [[name: '*/master']], extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: '/03-pipelines/Ejercicio 1/jenkins-resources/calculator']], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
-
+            checkout scmGit(branches: [[name: '*/master']], extensions: userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
+             ws: '/03-pipelines/Ejercicio 1/jenkins-resources/calculator'
 
          
             }
@@ -13,7 +13,7 @@ pipeline {
         stage('Compile') {
             steps {
                 
-                    sh 'gradlew compileJava'
+                    sh './gradlew compileJava'
 
             
             }
