--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,14 +3,13 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-            checkout scmGit(branches: [[name: '*/master']], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
+            checkout scmGit(branches: [[name: '*/master']], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]),
+            ws: '/03-pipelines/Ejercicio 1/jenkins-resources/calculator' 
 
          
             }
-            steps{
-                            ws: '/03-pipelines/Ejercicio 1/jenkins-resources/calculator'
 
-            }
+            
         }
         stage('Compile') {
             steps {
