--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,18 +3,17 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-            checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]),
-            ws: '/03-pipelines/Ejercicio 1/jenkins-resources/calculator' 
+            checkout scmGit(branches: [[name: '*/master']], extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: 'bootcampDevOps/03-pipelines/Ejercicio 1/jenkins-resources/calculator/']], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
+
 
          
             }
 
-            
         }
         stage('Compile') {
             steps {
                 
-                    sh './gradlew compileJava'
+                    sh 'gradlew compileJava'
 
             
             }
