--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                
+                    sh "echo $WORKSPACE"
                     sh './gradlew compileJava'
 
             
