--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -14,8 +14,10 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                    sh "echo $WORKSPACE"
+                    dir($WORKSPACE/jenkins-resources/calculator/){
                     sh './gradlew compileJava'
+
+                    }
 
             
             }
