--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                    dir($WORKSPACE/jenkins-resources/calculator/){
+                    dir($WORKSPACE){
                     sh './gradlew compileJava'
 
                     }
