--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -3,10 +3,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps{
-            checkout scmGit(branches: [[name: '*/master']], 
-            extensions: [[$class: 'RelativeTargetDirectory', 
-            relativeTargetDir: 'bootcampDevOps/03-pipelines/Ejercicio 1/jenkins-resources/calculator/']], 
-            userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']]) 
+checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/josekuma/bootcampDevOps.git']])
 
          
             }
@@ -14,7 +11,7 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                    dir($WORKSPACE){
+                    dir('/03-pipelines/Ejercicio 1/jenkins-resources/calculator/'){
                     sh './gradlew compileJava'
 
                     }
