--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -14,10 +14,12 @@ pipeline {
         stage('Compile') {
             steps {
                     dir('/03-pipelines/Ejercicio 1/jenkins-resources/calculator/'){
-                        sh 'ls'
-                        sh 'chmod +x gradlew'
-                          sh './gradlew compileJava'
-
+                        sh 
+                        '''
+                        ls
+                         chmod +x gradlew
+                          ./gradlew compileJava
+                        '''
                     }
 
             
