--- a/03-pipelines/Ejercicio 1/Jenkinsfile
+++ b/03-pipelines/Ejercicio 1/Jenkinsfile
@@ -13,13 +13,14 @@ pipeline {
         }
         stage('Compile') {
             steps {
-                    dir('/03-pipelines/Ejercicio 1/jenkins-resources/calculator/'){
+                    
                         sh  '''
+                        echo $WORKSPACE
                         ls -a
                          chmod +x gradlew
                           ./gradlew compileJava
                         '''
-                    }
+                    
 
             
             }
